// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Calendar Display tests should match defaultView="days" snapshot 1`] = `
<div>
  <div
    class="component sixWeeks"
    tabindex="-1"
  >
    <div
      aria-live="polite"
      class="header"
    >
      <div
        class="inner"
      >
        <button
          aria-label="Предыдущий месяц"
          class="component ghost m iconOnly arrow"
        />
        <button
          class="component ghost xs button filled button month"
        >
          <span
            class="text stretchText"
          >
            <span
              class="buttonContent"
            >
              Ноябрь
              <span
                class="upDownIcon"
              />
            </span>
          </span>
        </button>
        <button
          class="component ghost xs button filled button year"
        >
          <span
            class="text stretchText"
          >
            <span
              class="buttonContent"
            >
              2020
              <span
                class="upDownIcon"
              />
            </span>
          </span>
        </button>
        <button
          aria-label="Следующий месяц"
          class="component ghost m iconOnly arrow"
        />
      </div>
    </div>
    <div
      class="container"
    >
      <table
        class="daysTable"
      >
        <thead>
          <tr>
            <th
              class="dayName"
            >
              Пн
            </th>
            <th
              class="dayName"
            >
              Вт
            </th>
            <th
              class="dayName"
            >
              Ср
            </th>
            <th
              class="dayName"
            >
              Чт
            </th>
            <th
              class="dayName"
            >
              Пт
            </th>
            <th
              class="dayName"
            >
              Сб
            </th>
            <th
              class="dayName"
            >
              Вс
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td />
            <td />
            <td />
            <td />
            <td />
            <td />
            <td>
              <button
                aria-selected="false"
                class="component ghost xs day firstDay"
                data-date="1604178000000"
                tabindex="-1"
                type="button"
              >
                <span
                  class="text stretchText"
                >
                  1
                </span>
              </button>
            </td>
          </tr>
          <tr>
            <td>
              <button
                aria-selected="false"
                class="component ghost xs day"
                data-date="1604264400000"
                tabindex="-1"
                type="button"
              >
                <span
                  class="text stretchText"
                >
                  2
                </span>
              </button>
            </td>
            <td>
              <button
                aria-selected="false"
                class="component ghost xs day"
                data-date="1604350800000"
                tabindex="-1"
                type="button"
              >
                <span
                  class="text stretchText"
                >
                  3
                </span>
              </button>
            </td>
            <td>
              <button
                aria-selected="false"
                class="component ghost xs day"
                data-date="1604437200000"
                tabindex="-1"
                type="button"
              >
                <span
                  class="text stretchText"
                >
                  4
                </span>
              </button>
            </td>
            <td>
              <button
                aria-selected="false"
                class="component ghost xs day"
                data-date="1604523600000"
                tabindex="-1"
                type="button"
              >
                <span
                  class="text stretchText"
                >
                  5
                </span>
              </button>
            </td>
            <td>
              <button
                aria-selected="false"
                class="component ghost xs day"
                data-date="1604610000000"
                tabindex="-1"
                type="button"
              >
                <span
                  class="text stretchText"
                >
                  6
                </span>
              </button>
            </td>
            <td>
              <button
                aria-selected="false"
                class="component ghost xs day"
                data-date="1604696400000"
                tabindex="-1"
                type="button"
              >
                <span
                  class="text stretchText"
                >
                  7
                </span>
              </button>
            </td>
            <td>
              <button
                aria-selected="false"
                class="component ghost xs day"
                data-date="1604782800000"
                tabindex="-1"
                type="button"
              >
                <span
                  class="text stretchText"
                >
                  8
                </span>
              </button>
            </td>
          </tr>
          <tr>
            <td>
              <button
                aria-selected="false"
                class="component ghost xs day"
                data-date="1604869200000"
                tabindex="-1"
                type="button"
              >
                <span
                  class="text stretchText"
                >
                  9
                </span>
              </button>
            </td>
            <td>
              <button
                aria-selected="false"
                class="component ghost xs day"
                data-date="1604955600000"
                tabindex="-1"
                type="button"
              >
                <span
                  class="text stretchText"
                >
                  10
                </span>
              </button>
            </td>
            <td>
              <button
                aria-selected="false"
                class="component ghost xs day"
                data-date="1605042000000"
                tabindex="-1"
                type="button"
              >
                <span
                  class="text stretchText"
                >
                  11
                </span>
              </button>
            </td>
            <td>
              <button
                aria-selected="false"
                class="component ghost xs day"
                data-date="1605128400000"
                tabindex="-1"
                type="button"
              >
                <span
                  class="text stretchText"
                >
                  12
                </span>
              </button>
            </td>
            <td>
              <button
                aria-selected="false"
                class="component ghost xs day"
                data-date="1605214800000"
                tabindex="-1"
                type="button"
              >
                <span
                  class="text stretchText"
                >
                  13
                </span>
              </button>
            </td>
            <td>
              <button
                aria-selected="false"
                class="component ghost xs day"
                data-date="1605301200000"
                tabindex="-1"
                type="button"
              >
                <span
                  class="text stretchText"
                >
                  14
                </span>
              </button>
            </td>
            <td>
              <button
                aria-selected="false"
                class="component ghost xs day"
                data-date="1605387600000"
                tabindex="-1"
                type="button"
              >
                <span
                  class="text stretchText"
                >
                  15
                </span>
              </button>
            </td>
          </tr>
          <tr>
            <td>
              <button
                aria-selected="false"
                class="component ghost xs day"
                data-date="1605474000000"
                tabindex="-1"
                type="button"
              >
                <span
                  class="text stretchText"
                >
                  16
                </span>
              </button>
            </td>
            <td>
              <button
                aria-selected="false"
                class="component ghost xs day"
                data-date="1605560400000"
                tabindex="-1"
                type="button"
              >
                <span
                  class="text stretchText"
                >
                  17
                </span>
              </button>
            </td>
            <td>
              <button
                aria-selected="false"
                class="component ghost xs day"
                data-date="1605646800000"
                tabindex="-1"
                type="button"
              >
                <span
                  class="text stretchText"
                >
                  18
                </span>
              </button>
            </td>
            <td>
              <button
                aria-selected="false"
                class="component ghost xs day"
                data-date="1605733200000"
                tabindex="-1"
                type="button"
              >
                <span
                  class="text stretchText"
                >
                  19
                </span>
              </button>
            </td>
            <td>
              <button
                aria-selected="false"
                class="component ghost xs day"
                data-date="1605819600000"
                tabindex="-1"
                type="button"
              >
                <span
                  class="text stretchText"
                >
                  20
                </span>
              </button>
            </td>
            <td>
              <button
                aria-selected="false"
                class="component ghost xs day"
                data-date="1605906000000"
                tabindex="-1"
                type="button"
              >
                <span
                  class="text stretchText"
                >
                  21
                </span>
              </button>
            </td>
            <td>
              <button
                aria-selected="false"
                class="component ghost xs day"
                data-date="1605992400000"
                tabindex="-1"
                type="button"
              >
                <span
                  class="text stretchText"
                >
                  22
                </span>
              </button>
            </td>
          </tr>
          <tr>
            <td>
              <button
                aria-selected="false"
                class="component ghost xs day"
                data-date="1606078800000"
                tabindex="-1"
                type="button"
              >
                <span
                  class="text stretchText"
                >
                  23
                </span>
              </button>
            </td>
            <td>
              <button
                aria-selected="false"
                class="component ghost xs day"
                data-date="1606165200000"
                tabindex="-1"
                type="button"
              >
                <span
                  class="text stretchText"
                >
                  24
                </span>
              </button>
            </td>
            <td>
              <button
                aria-selected="false"
                class="component ghost xs day"
                data-date="1606251600000"
                tabindex="-1"
                type="button"
              >
                <span
                  class="text stretchText"
                >
                  25
                </span>
              </button>
            </td>
            <td>
              <button
                aria-selected="false"
                class="component ghost xs day"
                data-date="1606338000000"
                tabindex="-1"
                type="button"
              >
                <span
                  class="text stretchText"
                >
                  26
                </span>
              </button>
            </td>
            <td>
              <button
                aria-selected="false"
                class="component ghost xs day"
                data-date="1606424400000"
                tabindex="-1"
                type="button"
              >
                <span
                  class="text stretchText"
                >
                  27
                </span>
              </button>
            </td>
            <td>
              <button
                aria-selected="false"
                class="component ghost xs day"
                data-date="1606510800000"
                tabindex="-1"
                type="button"
              >
                <span
                  class="text stretchText"
                >
                  28
                </span>
              </button>
            </td>
            <td>
              <button
                aria-selected="false"
                class="component ghost xs day"
                data-date="1606597200000"
                tabindex="-1"
                type="button"
              >
                <span
                  class="text stretchText"
                >
                  29
                </span>
              </button>
            </td>
          </tr>
          <tr>
            <td>
              <button
                aria-selected="true"
                class="component ghost xs day selected lastDay"
                data-date="1606683600000"
                tabindex="0"
                type="button"
              >
                <span
                  class="text stretchText"
                >
                  30
                </span>
              </button>
            </td>
            <td />
            <td />
            <td />
            <td />
            <td />
            <td />
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`Calendar Display tests should match defaultView="months" snapshot 1`] = `
<div>
  <div
    class="component sixWeeks"
    tabindex="-1"
  >
    <div
      aria-live="polite"
      class="header"
    >
      <div
        class="inner"
      >
        <button
          aria-label="Предыдущий месяц"
          class="component ghost m iconOnly arrow"
        />
        <button
          class="component ghost xs button filled button month"
        >
          <span
            class="text stretchText"
          >
            <span
              class="buttonContent"
            >
              Ноябрь
              <span
                class="upDownIcon"
              />
            </span>
          </span>
        </button>
        <button
          class="component ghost xs button filled button year"
        >
          <span
            class="text stretchText"
          >
            <span
              class="buttonContent"
            >
              2020
              <span
                class="upDownIcon"
              />
            </span>
          </span>
        </button>
        <button
          aria-label="Следующий месяц"
          class="component ghost m iconOnly arrow"
        />
      </div>
    </div>
    <div
      class="container"
    >
      <div
        class="monthsTable"
      >
        <button
          aria-selected="false"
          class="component ghost xs button default button"
          data-date="1577826000000"
          tabindex="-1"
        >
          <span
            class="text stretchText"
          >
            Январь
          </span>
        </button>
        <button
          aria-selected="false"
          class="component ghost xs button default button"
          data-date="1580504400000"
          tabindex="-1"
        >
          <span
            class="text stretchText"
          >
            Февраль
          </span>
        </button>
        <button
          aria-selected="false"
          class="component ghost xs button default button"
          data-date="1583010000000"
          tabindex="-1"
        >
          <span
            class="text stretchText"
          >
            Март
          </span>
        </button>
        <button
          aria-selected="false"
          class="component ghost xs button default button"
          data-date="1585688400000"
          tabindex="-1"
        >
          <span
            class="text stretchText"
          >
            Апрель
          </span>
        </button>
        <button
          aria-selected="false"
          class="component ghost xs button default button"
          data-date="1588280400000"
          tabindex="-1"
        >
          <span
            class="text stretchText"
          >
            Май
          </span>
        </button>
        <button
          aria-selected="false"
          class="component ghost xs button default button"
          data-date="1590958800000"
          tabindex="-1"
        >
          <span
            class="text stretchText"
          >
            Июнь
          </span>
        </button>
        <button
          aria-selected="false"
          class="component ghost xs button default button"
          data-date="1593550800000"
          tabindex="-1"
        >
          <span
            class="text stretchText"
          >
            Июль
          </span>
        </button>
        <button
          aria-selected="false"
          class="component ghost xs button default button"
          data-date="1596229200000"
          tabindex="-1"
        >
          <span
            class="text stretchText"
          >
            Август
          </span>
        </button>
        <button
          aria-selected="false"
          class="component ghost xs button default button"
          data-date="1598907600000"
          tabindex="-1"
        >
          <span
            class="text stretchText"
          >
            Сентябрь
          </span>
        </button>
        <button
          aria-selected="false"
          class="component ghost xs button default button"
          data-date="1601499600000"
          tabindex="-1"
        >
          <span
            class="text stretchText"
          >
            Октябрь
          </span>
        </button>
        <button
          aria-selected="true"
          class="component ghost xs button selected button"
          data-date="1604178000000"
          tabindex="0"
        >
          <span
            class="text stretchText"
          >
            Ноябрь
          </span>
        </button>
        <button
          aria-selected="false"
          class="component ghost xs button outlined button"
          data-date="1606770000000"
          tabindex="-1"
        >
          <span
            class="text stretchText"
          >
            Декабрь
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Calendar Display tests should match defaultView="years" snapshot 1`] = `
<div>
  <div
    class="component sixWeeks"
    tabindex="-1"
  >
    <div
      aria-live="polite"
      class="header"
    >
      <div
        class="inner"
      >
        <button
          aria-label="Предыдущий месяц"
          class="component ghost m iconOnly arrow"
        />
        <button
          class="component ghost xs button filled button month"
        >
          <span
            class="text stretchText"
          >
            <span
              class="buttonContent"
            >
              Ноябрь
              <span
                class="upDownIcon"
              />
            </span>
          </span>
        </button>
        <button
          class="component ghost xs button filled button year"
        >
          <span
            class="text stretchText"
          >
            <span
              class="buttonContent"
            >
              2020
              <span
                class="upDownIcon"
              />
            </span>
          </span>
        </button>
        <button
          aria-label="Следующий месяц"
          class="component ghost m iconOnly arrow"
        />
      </div>
    </div>
    <div
      class="container"
    >
      <div
        class="yearsTable"
      >
        <div
          class="inner"
        >
          <button
            aria-selected="true"
            class="component ghost xs button selected button"
            data-date="1577826000000"
            tabindex="0"
          >
            <span
              class="text stretchText"
            >
              2020
            </span>
          </button>
          <button
            aria-selected="false"
            class="component ghost xs button default button"
            data-date="1546290000000"
            tabindex="-1"
          >
            <span
              class="text stretchText"
            >
              2019
            </span>
          </button>
          <button
            aria-selected="false"
            class="component ghost xs button default button"
            data-date="1514754000000"
            tabindex="-1"
          >
            <span
              class="text stretchText"
            >
              2018
            </span>
          </button>
          <button
            aria-selected="false"
            class="component ghost xs button default button"
            data-date="1483218000000"
            tabindex="-1"
          >
            <span
              class="text stretchText"
            >
              2017
            </span>
          </button>
          <button
            aria-selected="false"
            class="component ghost xs button default button"
            data-date="1451595600000"
            tabindex="-1"
          >
            <span
              class="text stretchText"
            >
              2016
            </span>
          </button>
          <button
            aria-selected="false"
            class="component ghost xs button default button"
            data-date="1420059600000"
            tabindex="-1"
          >
            <span
              class="text stretchText"
            >
              2015
            </span>
          </button>
          <button
            aria-selected="false"
            class="component ghost xs button default button"
            data-date="1388520000000"
            tabindex="-1"
          >
            <span
              class="text stretchText"
            >
              2014
            </span>
          </button>
          <button
            aria-selected="false"
            class="component ghost xs button default button"
            data-date="1356984000000"
            tabindex="-1"
          >
            <span
              class="text stretchText"
            >
              2013
            </span>
          </button>
          <button
            aria-selected="false"
            class="component ghost xs button default button"
            data-date="1325361600000"
            tabindex="-1"
          >
            <span
              class="text stretchText"
            >
              2012
            </span>
          </button>
          <button
            aria-selected="false"
            class="component ghost xs button default button"
            data-date="1293829200000"
            tabindex="-1"
          >
            <span
              class="text stretchText"
            >
              2011
            </span>
          </button>
          <button
            aria-selected="false"
            class="component ghost xs button default button"
            data-date="1262293200000"
            tabindex="-1"
          >
            <span
              class="text stretchText"
            >
              2010
            </span>
          </button>
          <button
            aria-selected="false"
            class="component ghost xs button default button"
            data-date="1230757200000"
            tabindex="-1"
          >
            <span
              class="text stretchText"
            >
              2009
            </span>
          </button>
          <button
            aria-selected="false"
            class="component ghost xs button default button"
            data-date="1199134800000"
            tabindex="-1"
          >
            <span
              class="text stretchText"
            >
              2008
            </span>
          </button>
          <button
            aria-selected="false"
            class="component ghost xs button default button"
            data-date="1167598800000"
            tabindex="-1"
          >
            <span
              class="text stretchText"
            >
              2007
            </span>
          </button>
          <button
            aria-selected="false"
            class="component ghost xs button default button"
            data-date="1136062800000"
            tabindex="-1"
          >
            <span
              class="text stretchText"
            >
              2006
            </span>
          </button>
          <button
            aria-selected="false"
            class="component ghost xs button default button"
            data-date="1104526800000"
            tabindex="-1"
          >
            <span
              class="text stretchText"
            >
              2005
            </span>
          </button>
          <button
            aria-selected="false"
            class="component ghost xs button default button"
            data-date="1072904400000"
            tabindex="-1"
          >
            <span
              class="text stretchText"
            >
              2004
            </span>
          </button>
          <button
            aria-selected="false"
            class="component ghost xs button default button"
            data-date="1041368400000"
            tabindex="-1"
          >
            <span
              class="text stretchText"
            >
              2003
            </span>
          </button>
          <button
            aria-selected="false"
            class="component ghost xs button default button"
            data-date="1009832400000"
            tabindex="-1"
          >
            <span
              class="text stretchText"
            >
              2002
            </span>
          </button>
          <button
            aria-selected="false"
            class="component ghost xs button default button"
            data-date="978296400000"
            tabindex="-1"
          >
            <span
              class="text stretchText"
            >
              2001
            </span>
          </button>
          <button
            aria-selected="false"
            class="component ghost xs button default button"
            data-date="946674000000"
            tabindex="-1"
          >
            <span
              class="text stretchText"
            >
              2000
            </span>
          </button>
          <button
            aria-selected="false"
            class="component ghost xs button default button"
            data-date="915138000000"
            tabindex="-1"
          >
            <span
              class="text stretchText"
            >
              1999
            </span>
          </button>
          <button
            aria-selected="false"
            class="component ghost xs button default button"
            data-date="883602000000"
            tabindex="-1"
          >
            <span
              class="text stretchText"
            >
              1998
            </span>
          </button>
          <button
            aria-selected="false"
            class="component ghost xs button default button"
            data-date="852066000000"
            tabindex="-1"
          >
            <span
              class="text stretchText"
            >
              1997
            </span>
          </button>
          <button
            aria-selected="false"
            class="component ghost xs button default button"
            data-date="820443600000"
            tabindex="-1"
          >
            <span
              class="text stretchText"
            >
              1996
            </span>
          </button>
          <button
            aria-selected="false"
            class="component ghost xs button default button"
            data-date="788907600000"
            tabindex="-1"
          >
            <span
              class="text stretchText"
            >
              1995
            </span>
          </button>
          <button
            aria-selected="false"
            class="component ghost xs button default button"
            data-date="757371600000"
            tabindex="-1"
          >
            <span
              class="text stretchText"
            >
              1994
            </span>
          </button>
          <button
            aria-selected="false"
            class="component ghost xs button default button"
            data-date="725835600000"
            tabindex="-1"
          >
            <span
              class="text stretchText"
            >
              1993
            </span>
          </button>
          <button
            aria-selected="false"
            class="component ghost xs button default button"
            data-date="694216800000"
            tabindex="-1"
          >
            <span
              class="text stretchText"
            >
              1992
            </span>
          </button>
          <button
            aria-selected="false"
            class="component ghost xs button default button"
            data-date="662677200000"
            tabindex="-1"
          >
            <span
              class="text stretchText"
            >
              1991
            </span>
          </button>
          <button
            aria-selected="false"
            class="component ghost xs button default button"
            data-date="631141200000"
            tabindex="-1"
          >
            <span
              class="text stretchText"
            >
              1990
            </span>
          </button>
          <button
            aria-selected="false"
            class="component ghost xs button default button"
            data-date="599605200000"
            tabindex="-1"
          >
            <span
              class="text stretchText"
            >
              1989
            </span>
          </button>
          <button
            aria-selected="false"
            class="component ghost xs button default button"
            data-date="567982800000"
            tabindex="-1"
          >
            <span
              class="text stretchText"
            >
              1988
            </span>
          </button>
          <button
            aria-selected="false"
            class="component ghost xs button default button"
            data-date="536446800000"
            tabindex="-1"
          >
            <span
              class="text stretchText"
            >
              1987
            </span>
          </button>
          <button
            aria-selected="false"
            class="component ghost xs button default button"
            data-date="504910800000"
            tabindex="-1"
          >
            <span
              class="text stretchText"
            >
              1986
            </span>
          </button>
          <button
            aria-selected="false"
            class="component ghost xs button default button"
            data-date="473374800000"
            tabindex="-1"
          >
            <span
              class="text stretchText"
            >
              1985
            </span>
          </button>
          <button
            aria-selected="false"
            class="component ghost xs button default button"
            data-date="441752400000"
            tabindex="-1"
          >
            <span
              class="text stretchText"
            >
              1984
            </span>
          </button>
          <button
            aria-selected="false"
            class="component ghost xs button default button"
            data-date="410216400000"
            tabindex="-1"
          >
            <span
              class="text stretchText"
            >
              1983
            </span>
          </button>
          <button
            aria-selected="false"
            class="component ghost xs button default button"
            data-date="378680400000"
            tabindex="-1"
          >
            <span
              class="text stretchText"
            >
              1982
            </span>
          </button>
          <button
            aria-selected="false"
            class="component ghost xs button default button"
            data-date="347144400000"
            tabindex="-1"
          >
            <span
              class="text stretchText"
            >
              1981
            </span>
          </button>
          <button
            aria-selected="false"
            class="component ghost xs button default button"
            data-date="315522000000"
            tabindex="-1"
          >
            <span
              class="text stretchText"
            >
              1980
            </span>
          </button>
          <button
            aria-selected="false"
            class="component ghost xs button default button"
            data-date="283986000000"
            tabindex="-1"
          >
            <span
              class="text stretchText"
            >
              1979
            </span>
          </button>
          <button
            aria-selected="false"
            class="component ghost xs button default button"
            data-date="252450000000"
            tabindex="-1"
          >
            <span
              class="text stretchText"
            >
              1978
            </span>
          </button>
          <button
            aria-selected="false"
            class="component ghost xs button default button"
            data-date="220914000000"
            tabindex="-1"
          >
            <span
              class="text stretchText"
            >
              1977
            </span>
          </button>
          <button
            aria-selected="false"
            class="component ghost xs button default button"
            data-date="189291600000"
            tabindex="-1"
          >
            <span
              class="text stretchText"
            >
              1976
            </span>
          </button>
          <button
            aria-selected="false"
            class="component ghost xs button default button"
            data-date="157755600000"
            tabindex="-1"
          >
            <span
              class="text stretchText"
            >
              1975
            </span>
          </button>
          <button
            aria-selected="false"
            class="component ghost xs button default button"
            data-date="126219600000"
            tabindex="-1"
          >
            <span
              class="text stretchText"
            >
              1974
            </span>
          </button>
          <button
            aria-selected="false"
            class="component ghost xs button default button"
            data-date="94683600000"
            tabindex="-1"
          >
            <span
              class="text stretchText"
            >
              1973
            </span>
          </button>
          <button
            aria-selected="false"
            class="component ghost xs button default button"
            data-date="63061200000"
            tabindex="-1"
          >
            <span
              class="text stretchText"
            >
              1972
            </span>
          </button>
          <button
            aria-selected="false"
            class="component ghost xs button default button"
            data-date="31525200000"
            tabindex="-1"
          >
            <span
              class="text stretchText"
            >
              1971
            </span>
          </button>
          <button
            aria-selected="false"
            class="component ghost xs button default button"
            data-date="-10800000"
            tabindex="-1"
          >
            <span
              class="text stretchText"
            >
              1970
            </span>
          </button>
          <button
            aria-selected="false"
            class="component ghost xs button default button"
            data-date="-31546800000"
            tabindex="-1"
          >
            <span
              class="text stretchText"
            >
              1969
            </span>
          </button>
          <button
            aria-selected="false"
            class="component ghost xs button default button"
            data-date="-63169200000"
            tabindex="-1"
          >
            <span
              class="text stretchText"
            >
              1968
            </span>
          </button>
          <button
            aria-selected="false"
            class="component ghost xs button default button"
            data-date="-94705200000"
            tabindex="-1"
          >
            <span
              class="text stretchText"
            >
              1967
            </span>
          </button>
          <button
            aria-selected="false"
            class="component ghost xs button default button"
            data-date="-126241200000"
            tabindex="-1"
          >
            <span
              class="text stretchText"
            >
              1966
            </span>
          </button>
          <button
            aria-selected="false"
            class="component ghost xs button default button"
            data-date="-157777200000"
            tabindex="-1"
          >
            <span
              class="text stretchText"
            >
              1965
            </span>
          </button>
          <button
            aria-selected="false"
            class="component ghost xs button default button"
            data-date="-189399600000"
            tabindex="-1"
          >
            <span
              class="text stretchText"
            >
              1964
            </span>
          </button>
          <button
            aria-selected="false"
            class="component ghost xs button default button"
            data-date="-220935600000"
            tabindex="-1"
          >
            <span
              class="text stretchText"
            >
              1963
            </span>
          </button>
          <button
            aria-selected="false"
            class="component ghost xs button default button"
            data-date="-252471600000"
            tabindex="-1"
          >
            <span
              class="text stretchText"
            >
              1962
            </span>
          </button>
          <button
            aria-selected="false"
            class="component ghost xs button default button"
            data-date="-284007600000"
            tabindex="-1"
          >
            <span
              class="text stretchText"
            >
              1961
            </span>
          </button>
          <button
            aria-selected="false"
            class="component ghost xs button default button"
            data-date="-315630000000"
            tabindex="-1"
          >
            <span
              class="text stretchText"
            >
              1960
            </span>
          </button>
          <button
            aria-selected="false"
            class="component ghost xs button default button"
            data-date="-347166000000"
            tabindex="-1"
          >
            <span
              class="text stretchText"
            >
              1959
            </span>
          </button>
          <button
            aria-selected="false"
            class="component ghost xs button default button"
            data-date="-378702000000"
            tabindex="-1"
          >
            <span
              class="text stretchText"
            >
              1958
            </span>
          </button>
          <button
            aria-selected="false"
            class="component ghost xs button default button"
            data-date="-410238000000"
            tabindex="-1"
          >
            <span
              class="text stretchText"
            >
              1957
            </span>
          </button>
          <button
            aria-selected="false"
            class="component ghost xs button default button"
            data-date="-441860400000"
            tabindex="-1"
          >
            <span
              class="text stretchText"
            >
              1956
            </span>
          </button>
          <button
            aria-selected="false"
            class="component ghost xs button default button"
            data-date="-473396400000"
            tabindex="-1"
          >
            <span
              class="text stretchText"
            >
              1955
            </span>
          </button>
          <button
            aria-selected="false"
            class="component ghost xs button default button"
            data-date="-504932400000"
            tabindex="-1"
          >
            <span
              class="text stretchText"
            >
              1954
            </span>
          </button>
          <button
            aria-selected="false"
            class="component ghost xs button default button"
            data-date="-536468400000"
            tabindex="-1"
          >
            <span
              class="text stretchText"
            >
              1953
            </span>
          </button>
          <button
            aria-selected="false"
            class="component ghost xs button default button"
            data-date="-568090800000"
            tabindex="-1"
          >
            <span
              class="text stretchText"
            >
              1952
            </span>
          </button>
          <button
            aria-selected="false"
            class="component ghost xs button default button"
            data-date="-599626800000"
            tabindex="-1"
          >
            <span
              class="text stretchText"
            >
              1951
            </span>
          </button>
          <button
            aria-selected="false"
            class="component ghost xs button default button"
            data-date="-631162800000"
            tabindex="-1"
          >
            <span
              class="text stretchText"
            >
              1950
            </span>
          </button>
          <button
            aria-selected="false"
            class="component ghost xs button default button"
            data-date="-662698800000"
            tabindex="-1"
          >
            <span
              class="text stretchText"
            >
              1949
            </span>
          </button>
          <button
            aria-selected="false"
            class="component ghost xs button default button"
            data-date="-694321200000"
            tabindex="-1"
          >
            <span
              class="text stretchText"
            >
              1948
            </span>
          </button>
          <button
            aria-selected="false"
            class="component ghost xs button default button"
            data-date="-725857200000"
            tabindex="-1"
          >
            <span
              class="text stretchText"
            >
              1947
            </span>
          </button>
          <button
            aria-selected="false"
            class="component ghost xs button default button"
            data-date="-757393200000"
            tabindex="-1"
          >
            <span
              class="text stretchText"
            >
              1946
            </span>
          </button>
          <button
            aria-selected="false"
            class="component ghost xs button default button"
            data-date="-788929200000"
            tabindex="-1"
          >
            <span
              class="text stretchText"
            >
              1945
            </span>
          </button>
          <button
            aria-selected="false"
            class="component ghost xs button default button"
            data-date="-820551600000"
            tabindex="-1"
          >
            <span
              class="text stretchText"
            >
              1944
            </span>
          </button>
          <button
            aria-selected="false"
            class="component ghost xs button default button"
            data-date="-852087600000"
            tabindex="-1"
          >
            <span
              class="text stretchText"
            >
              1943
            </span>
          </button>
          <button
            aria-selected="false"
            class="component ghost xs button default button"
            data-date="-883623600000"
            tabindex="-1"
          >
            <span
              class="text stretchText"
            >
              1942
            </span>
          </button>
          <button
            aria-selected="false"
            class="component ghost xs button default button"
            data-date="-915159600000"
            tabindex="-1"
          >
            <span
              class="text stretchText"
            >
              1941
            </span>
          </button>
          <button
            aria-selected="false"
            class="component ghost xs button default button"
            data-date="-946782000000"
            tabindex="-1"
          >
            <span
              class="text stretchText"
            >
              1940
            </span>
          </button>
          <button
            aria-selected="false"
            class="component ghost xs button default button"
            data-date="-978318000000"
            tabindex="-1"
          >
            <span
              class="text stretchText"
            >
              1939
            </span>
          </button>
          <button
            aria-selected="false"
            class="component ghost xs button default button"
            data-date="-1009854000000"
            tabindex="-1"
          >
            <span
              class="text stretchText"
            >
              1938
            </span>
          </button>
          <button
            aria-selected="false"
            class="component ghost xs button default button"
            data-date="-1041390000000"
            tabindex="-1"
          >
            <span
              class="text stretchText"
            >
              1937
            </span>
          </button>
          <button
            aria-selected="false"
            class="component ghost xs button default button"
            data-date="-1073012400000"
            tabindex="-1"
          >
            <span
              class="text stretchText"
            >
              1936
            </span>
          </button>
          <button
            aria-selected="false"
            class="component ghost xs button default button"
            data-date="-1104548400000"
            tabindex="-1"
          >
            <span
              class="text stretchText"
            >
              1935
            </span>
          </button>
          <button
            aria-selected="false"
            class="component ghost xs button default button"
            data-date="-1136084400000"
            tabindex="-1"
          >
            <span
              class="text stretchText"
            >
              1934
            </span>
          </button>
          <button
            aria-selected="false"
            class="component ghost xs button default button"
            data-date="-1167620400000"
            tabindex="-1"
          >
            <span
              class="text stretchText"
            >
              1933
            </span>
          </button>
          <button
            aria-selected="false"
            class="component ghost xs button default button"
            data-date="-1199242800000"
            tabindex="-1"
          >
            <span
              class="text stretchText"
            >
              1932
            </span>
          </button>
          <button
            aria-selected="false"
            class="component ghost xs button default button"
            data-date="-1230778800000"
            tabindex="-1"
          >
            <span
              class="text stretchText"
            >
              1931
            </span>
          </button>
          <button
            aria-selected="false"
            class="component ghost xs button default button"
            data-date="-1262311200000"
            tabindex="-1"
          >
            <span
              class="text stretchText"
            >
              1930
            </span>
          </button>
          <button
            aria-selected="false"
            class="component ghost xs button default button"
            data-date="-1293847200000"
            tabindex="-1"
          >
            <span
              class="text stretchText"
            >
              1929
            </span>
          </button>
          <button
            aria-selected="false"
            class="component ghost xs button default button"
            data-date="-1325469600000"
            tabindex="-1"
          >
            <span
              class="text stretchText"
            >
              1928
            </span>
          </button>
          <button
            aria-selected="false"
            class="component ghost xs button default button"
            data-date="-1357005600000"
            tabindex="-1"
          >
            <span
              class="text stretchText"
            >
              1927
            </span>
          </button>
          <button
            aria-selected="false"
            class="component ghost xs button default button"
            data-date="-1388541600000"
            tabindex="-1"
          >
            <span
              class="text stretchText"
            >
              1926
            </span>
          </button>
          <button
            aria-selected="false"
            class="component ghost xs button default button"
            data-date="-1420077600000"
            tabindex="-1"
          >
            <span
              class="text stretchText"
            >
              1925
            </span>
          </button>
          <button
            aria-selected="false"
            class="component ghost xs button default button"
            data-date="-1451700000000"
            tabindex="-1"
          >
            <span
              class="text stretchText"
            >
              1924
            </span>
          </button>
          <button
            aria-selected="false"
            class="component ghost xs button default button"
            data-date="-1483236000000"
            tabindex="-1"
          >
            <span
              class="text stretchText"
            >
              1923
            </span>
          </button>
          <button
            aria-selected="false"
            class="component ghost xs button default button"
            data-date="-1514775600000"
            tabindex="-1"
          >
            <span
              class="text stretchText"
            >
              1922
            </span>
          </button>
          <button
            aria-selected="false"
            class="component ghost xs button default button"
            data-date="-1546311600000"
            tabindex="-1"
          >
            <span
              class="text stretchText"
            >
              1921
            </span>
          </button>
          <button
            aria-selected="false"
            class="component ghost xs button default button"
            data-date="-1577934000000"
            tabindex="-1"
          >
            <span
              class="text stretchText"
            >
              1920
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Calendar Display tests should match selectorView="full" snapshot 1`] = `
<div>
  <div
    class="component sixWeeks"
    tabindex="-1"
  >
    <div
      aria-live="polite"
      class="header"
    >
      <div
        class="inner"
      >
        <button
          aria-label="Предыдущий месяц"
          class="component ghost m iconOnly arrow"
        />
        <button
          class="component ghost xs button filled button month"
        >
          <span
            class="text stretchText"
          >
            <span
              class="buttonContent"
            >
              Ноябрь
              <span
                class="upDownIcon"
              />
            </span>
          </span>
        </button>
        <button
          class="component ghost xs button filled button year"
        >
          <span
            class="text stretchText"
          >
            <span
              class="buttonContent"
            >
              2020
              <span
                class="upDownIcon"
              />
            </span>
          </span>
        </button>
        <button
          aria-label="Следующий месяц"
          class="component ghost m iconOnly arrow"
        />
      </div>
    </div>
    <div
      class="container"
    >
      <table
        class="daysTable"
      >
        <thead>
          <tr>
            <th
              class="dayName"
            >
              Пн
            </th>
            <th
              class="dayName"
            >
              Вт
            </th>
            <th
              class="dayName"
            >
              Ср
            </th>
            <th
              class="dayName"
            >
              Чт
            </th>
            <th
              class="dayName"
            >
              Пт
            </th>
            <th
              class="dayName"
            >
              Сб
            </th>
            <th
              class="dayName"
            >
              Вс
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td />
            <td />
            <td />
            <td />
            <td />
            <td />
            <td>
              <button
                aria-selected="false"
                class="component ghost xs day firstDay"
                data-date="1604178000000"
                tabindex="-1"
                type="button"
              >
                <span
                  class="text stretchText"
                >
                  1
                </span>
              </button>
            </td>
          </tr>
          <tr>
            <td>
              <button
                aria-selected="false"
                class="component ghost xs day"
                data-date="1604264400000"
                tabindex="-1"
                type="button"
              >
                <span
                  class="text stretchText"
                >
                  2
                </span>
              </button>
            </td>
            <td>
              <button
                aria-selected="false"
                class="component ghost xs day"
                data-date="1604350800000"
                tabindex="-1"
                type="button"
              >
                <span
                  class="text stretchText"
                >
                  3
                </span>
              </button>
            </td>
            <td>
              <button
                aria-selected="false"
                class="component ghost xs day"
                data-date="1604437200000"
                tabindex="-1"
                type="button"
              >
                <span
                  class="text stretchText"
                >
                  4
                </span>
              </button>
            </td>
            <td>
              <button
                aria-selected="false"
                class="component ghost xs day"
                data-date="1604523600000"
                tabindex="-1"
                type="button"
              >
                <span
                  class="text stretchText"
                >
                  5
                </span>
              </button>
            </td>
            <td>
              <button
                aria-selected="false"
                class="component ghost xs day"
                data-date="1604610000000"
                tabindex="-1"
                type="button"
              >
                <span
                  class="text stretchText"
                >
                  6
                </span>
              </button>
            </td>
            <td>
              <button
                aria-selected="false"
                class="component ghost xs day"
                data-date="1604696400000"
                tabindex="-1"
                type="button"
              >
                <span
                  class="text stretchText"
                >
                  7
                </span>
              </button>
            </td>
            <td>
              <button
                aria-selected="false"
                class="component ghost xs day"
                data-date="1604782800000"
                tabindex="-1"
                type="button"
              >
                <span
                  class="text stretchText"
                >
                  8
                </span>
              </button>
            </td>
          </tr>
          <tr>
            <td>
              <button
                aria-selected="false"
                class="component ghost xs day"
                data-date="1604869200000"
                tabindex="-1"
                type="button"
              >
                <span
                  class="text stretchText"
                >
                  9
                </span>
              </button>
            </td>
            <td>
              <button
                aria-selected="false"
                class="component ghost xs day"
                data-date="1604955600000"
                tabindex="-1"
                type="button"
              >
                <span
                  class="text stretchText"
                >
                  10
                </span>
              </button>
            </td>
            <td>
              <button
                aria-selected="false"
                class="component ghost xs day"
                data-date="1605042000000"
                tabindex="-1"
                type="button"
              >
                <span
                  class="text stretchText"
                >
                  11
                </span>
              </button>
            </td>
            <td>
              <button
                aria-selected="false"
                class="component ghost xs day"
                data-date="1605128400000"
                tabindex="-1"
                type="button"
              >
                <span
                  class="text stretchText"
                >
                  12
                </span>
              </button>
            </td>
            <td>
              <button
                aria-selected="false"
                class="component ghost xs day"
                data-date="1605214800000"
                tabindex="-1"
                type="button"
              >
                <span
                  class="text stretchText"
                >
                  13
                </span>
              </button>
            </td>
            <td>
              <button
                aria-selected="false"
                class="component ghost xs day"
                data-date="1605301200000"
                tabindex="-1"
                type="button"
              >
                <span
                  class="text stretchText"
                >
                  14
                </span>
              </button>
            </td>
            <td>
              <button
                aria-selected="false"
                class="component ghost xs day"
                data-date="1605387600000"
                tabindex="-1"
                type="button"
              >
                <span
                  class="text stretchText"
                >
                  15
                </span>
              </button>
            </td>
          </tr>
          <tr>
            <td>
              <button
                aria-selected="false"
                class="component ghost xs day"
                data-date="1605474000000"
                tabindex="-1"
                type="button"
              >
                <span
                  class="text stretchText"
                >
                  16
                </span>
              </button>
            </td>
            <td>
              <button
                aria-selected="false"
                class="component ghost xs day"
                data-date="1605560400000"
                tabindex="-1"
                type="button"
              >
                <span
                  class="text stretchText"
                >
                  17
                </span>
              </button>
            </td>
            <td>
              <button
                aria-selected="false"
                class="component ghost xs day"
                data-date="1605646800000"
                tabindex="-1"
                type="button"
              >
                <span
                  class="text stretchText"
                >
                  18
                </span>
              </button>
            </td>
            <td>
              <button
                aria-selected="false"
                class="component ghost xs day"
                data-date="1605733200000"
                tabindex="-1"
                type="button"
              >
                <span
                  class="text stretchText"
                >
                  19
                </span>
              </button>
            </td>
            <td>
              <button
                aria-selected="false"
                class="component ghost xs day"
                data-date="1605819600000"
                tabindex="-1"
                type="button"
              >
                <span
                  class="text stretchText"
                >
                  20
                </span>
              </button>
            </td>
            <td>
              <button
                aria-selected="false"
                class="component ghost xs day"
                data-date="1605906000000"
                tabindex="-1"
                type="button"
              >
                <span
                  class="text stretchText"
                >
                  21
                </span>
              </button>
            </td>
            <td>
              <button
                aria-selected="false"
                class="component ghost xs day"
                data-date="1605992400000"
                tabindex="-1"
                type="button"
              >
                <span
                  class="text stretchText"
                >
                  22
                </span>
              </button>
            </td>
          </tr>
          <tr>
            <td>
              <button
                aria-selected="false"
                class="component ghost xs day"
                data-date="1606078800000"
                tabindex="-1"
                type="button"
              >
                <span
                  class="text stretchText"
                >
                  23
                </span>
              </button>
            </td>
            <td>
              <button
                aria-selected="false"
                class="component ghost xs day"
                data-date="1606165200000"
                tabindex="-1"
                type="button"
              >
                <span
                  class="text stretchText"
                >
                  24
                </span>
              </button>
            </td>
            <td>
              <button
                aria-selected="false"
                class="component ghost xs day"
                data-date="1606251600000"
                tabindex="-1"
                type="button"
              >
                <span
                  class="text stretchText"
                >
                  25
                </span>
              </button>
            </td>
            <td>
              <button
                aria-selected="false"
                class="component ghost xs day"
                data-date="1606338000000"
                tabindex="-1"
                type="button"
              >
                <span
                  class="text stretchText"
                >
                  26
                </span>
              </button>
            </td>
            <td>
              <button
                aria-selected="false"
                class="component ghost xs day"
                data-date="1606424400000"
                tabindex="-1"
                type="button"
              >
                <span
                  class="text stretchText"
                >
                  27
                </span>
              </button>
            </td>
            <td>
              <button
                aria-selected="false"
                class="component ghost xs day"
                data-date="1606510800000"
                tabindex="-1"
                type="button"
              >
                <span
                  class="text stretchText"
                >
                  28
                </span>
              </button>
            </td>
            <td>
              <button
                aria-selected="false"
                class="component ghost xs day"
                data-date="1606597200000"
                tabindex="-1"
                type="button"
              >
                <span
                  class="text stretchText"
                >
                  29
                </span>
              </button>
            </td>
          </tr>
          <tr>
            <td>
              <button
                aria-selected="true"
                class="component ghost xs day selected lastDay"
                data-date="1606683600000"
                tabindex="0"
                type="button"
              >
                <span
                  class="text stretchText"
                >
                  30
                </span>
              </button>
            </td>
            <td />
            <td />
            <td />
            <td />
            <td />
            <td />
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`Calendar Display tests should match selectorView="month-only" snapshot 1`] = `
<div>
  <div
    class="component sixWeeks"
    tabindex="-1"
  >
    <div
      aria-live="polite"
      class="header monthOnly"
    >
      <div
        class="inner"
      >
        <button
          aria-label="Предыдущий месяц"
          class="component ghost m iconOnly arrow"
        />
        <span
          class="button month"
        >
          Ноябрь
        </span>
        <button
          aria-label="Следующий месяц"
          class="component ghost m iconOnly arrow"
        />
      </div>
    </div>
    <div
      class="container"
    >
      <table
        class="daysTable"
      >
        <thead>
          <tr>
            <th
              class="dayName"
            >
              Пн
            </th>
            <th
              class="dayName"
            >
              Вт
            </th>
            <th
              class="dayName"
            >
              Ср
            </th>
            <th
              class="dayName"
            >
              Чт
            </th>
            <th
              class="dayName"
            >
              Пт
            </th>
            <th
              class="dayName"
            >
              Сб
            </th>
            <th
              class="dayName"
            >
              Вс
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td />
            <td />
            <td />
            <td />
            <td />
            <td />
            <td>
              <button
                aria-selected="false"
                class="component ghost xs day firstDay"
                data-date="1604178000000"
                tabindex="-1"
                type="button"
              >
                <span
                  class="text stretchText"
                >
                  1
                </span>
              </button>
            </td>
          </tr>
          <tr>
            <td>
              <button
                aria-selected="false"
                class="component ghost xs day"
                data-date="1604264400000"
                tabindex="-1"
                type="button"
              >
                <span
                  class="text stretchText"
                >
                  2
                </span>
              </button>
            </td>
            <td>
              <button
                aria-selected="false"
                class="component ghost xs day"
                data-date="1604350800000"
                tabindex="-1"
                type="button"
              >
                <span
                  class="text stretchText"
                >
                  3
                </span>
              </button>
            </td>
            <td>
              <button
                aria-selected="false"
                class="component ghost xs day"
                data-date="1604437200000"
                tabindex="-1"
                type="button"
              >
                <span
                  class="text stretchText"
                >
                  4
                </span>
              </button>
            </td>
            <td>
              <button
                aria-selected="false"
                class="component ghost xs day"
                data-date="1604523600000"
                tabindex="-1"
                type="button"
              >
                <span
                  class="text stretchText"
                >
                  5
                </span>
              </button>
            </td>
            <td>
              <button
                aria-selected="false"
                class="component ghost xs day"
                data-date="1604610000000"
                tabindex="-1"
                type="button"
              >
                <span
                  class="text stretchText"
                >
                  6
                </span>
              </button>
            </td>
            <td>
              <button
                aria-selected="false"
                class="component ghost xs day"
                data-date="1604696400000"
                tabindex="-1"
                type="button"
              >
                <span
                  class="text stretchText"
                >
                  7
                </span>
              </button>
            </td>
            <td>
              <button
                aria-selected="false"
                class="component ghost xs day"
                data-date="1604782800000"
                tabindex="-1"
                type="button"
              >
                <span
                  class="text stretchText"
                >
                  8
                </span>
              </button>
            </td>
          </tr>
          <tr>
            <td>
              <button
                aria-selected="false"
                class="component ghost xs day"
                data-date="1604869200000"
                tabindex="-1"
                type="button"
              >
                <span
                  class="text stretchText"
                >
                  9
                </span>
              </button>
            </td>
            <td>
              <button
                aria-selected="false"
                class="component ghost xs day"
                data-date="1604955600000"
                tabindex="-1"
                type="button"
              >
                <span
                  class="text stretchText"
                >
                  10
                </span>
              </button>
            </td>
            <td>
              <button
                aria-selected="false"
                class="component ghost xs day"
                data-date="1605042000000"
                tabindex="-1"
                type="button"
              >
                <span
                  class="text stretchText"
                >
                  11
                </span>
              </button>
            </td>
            <td>
              <button
                aria-selected="false"
                class="component ghost xs day"
                data-date="1605128400000"
                tabindex="-1"
                type="button"
              >
                <span
                  class="text stretchText"
                >
                  12
                </span>
              </button>
            </td>
            <td>
              <button
                aria-selected="false"
                class="component ghost xs day"
                data-date="1605214800000"
                tabindex="-1"
                type="button"
              >
                <span
                  class="text stretchText"
                >
                  13
                </span>
              </button>
            </td>
            <td>
              <button
                aria-selected="false"
                class="component ghost xs day"
                data-date="1605301200000"
                tabindex="-1"
                type="button"
              >
                <span
                  class="text stretchText"
                >
                  14
                </span>
              </button>
            </td>
            <td>
              <button
                aria-selected="false"
                class="component ghost xs day"
                data-date="1605387600000"
                tabindex="-1"
                type="button"
              >
                <span
                  class="text stretchText"
                >
                  15
                </span>
              </button>
            </td>
          </tr>
          <tr>
            <td>
              <button
                aria-selected="false"
                class="component ghost xs day"
                data-date="1605474000000"
                tabindex="-1"
                type="button"
              >
                <span
                  class="text stretchText"
                >
                  16
                </span>
              </button>
            </td>
            <td>
              <button
                aria-selected="false"
                class="component ghost xs day"
                data-date="1605560400000"
                tabindex="-1"
                type="button"
              >
                <span
                  class="text stretchText"
                >
                  17
                </span>
              </button>
            </td>
            <td>
              <button
                aria-selected="false"
                class="component ghost xs day"
                data-date="1605646800000"
                tabindex="-1"
                type="button"
              >
                <span
                  class="text stretchText"
                >
                  18
                </span>
              </button>
            </td>
            <td>
              <button
                aria-selected="false"
                class="component ghost xs day"
                data-date="1605733200000"
                tabindex="-1"
                type="button"
              >
                <span
                  class="text stretchText"
                >
                  19
                </span>
              </button>
            </td>
            <td>
              <button
                aria-selected="false"
                class="component ghost xs day"
                data-date="1605819600000"
                tabindex="-1"
                type="button"
              >
                <span
                  class="text stretchText"
                >
                  20
                </span>
              </button>
            </td>
            <td>
              <button
                aria-selected="false"
                class="component ghost xs day"
                data-date="1605906000000"
                tabindex="-1"
                type="button"
              >
                <span
                  class="text stretchText"
                >
                  21
                </span>
              </button>
            </td>
            <td>
              <button
                aria-selected="false"
                class="component ghost xs day"
                data-date="1605992400000"
                tabindex="-1"
                type="button"
              >
                <span
                  class="text stretchText"
                >
                  22
                </span>
              </button>
            </td>
          </tr>
          <tr>
            <td>
              <button
                aria-selected="false"
                class="component ghost xs day"
                data-date="1606078800000"
                tabindex="-1"
                type="button"
              >
                <span
                  class="text stretchText"
                >
                  23
                </span>
              </button>
            </td>
            <td>
              <button
                aria-selected="false"
                class="component ghost xs day"
                data-date="1606165200000"
                tabindex="-1"
                type="button"
              >
                <span
                  class="text stretchText"
                >
                  24
                </span>
              </button>
            </td>
            <td>
              <button
                aria-selected="false"
                class="component ghost xs day"
                data-date="1606251600000"
                tabindex="-1"
                type="button"
              >
                <span
                  class="text stretchText"
                >
                  25
                </span>
              </button>
            </td>
            <td>
              <button
                aria-selected="false"
                class="component ghost xs day"
                data-date="1606338000000"
                tabindex="-1"
                type="button"
              >
                <span
                  class="text stretchText"
                >
                  26
                </span>
              </button>
            </td>
            <td>
              <button
                aria-selected="false"
                class="component ghost xs day"
                data-date="1606424400000"
                tabindex="-1"
                type="button"
              >
                <span
                  class="text stretchText"
                >
                  27
                </span>
              </button>
            </td>
            <td>
              <button
                aria-selected="false"
                class="component ghost xs day"
                data-date="1606510800000"
                tabindex="-1"
                type="button"
              >
                <span
                  class="text stretchText"
                >
                  28
                </span>
              </button>
            </td>
            <td>
              <button
                aria-selected="false"
                class="component ghost xs day"
                data-date="1606597200000"
                tabindex="-1"
                type="button"
              >
                <span
                  class="text stretchText"
                >
                  29
                </span>
              </button>
            </td>
          </tr>
          <tr>
            <td>
              <button
                aria-selected="true"
                class="component ghost xs day selected lastDay"
                data-date="1606683600000"
                tabindex="0"
                type="button"
              >
                <span
                  class="text stretchText"
                >
                  30
                </span>
              </button>
            </td>
            <td />
            <td />
            <td />
            <td />
            <td />
            <td />
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`Calendar Display tests should match snapshot 1`] = `
<div>
  <div
    class="component sixWeeks"
    tabindex="-1"
  >
    <div
      aria-live="polite"
      class="header"
    >
      <div
        class="inner"
      >
        <button
          aria-label="Предыдущий месяц"
          class="component ghost m iconOnly arrow"
        />
        <button
          class="component ghost xs button filled button month"
        >
          <span
            class="text stretchText"
          >
            <span
              class="buttonContent"
            >
              Ноябрь
              <span
                class="upDownIcon"
              />
            </span>
          </span>
        </button>
        <button
          class="component ghost xs button filled button year"
        >
          <span
            class="text stretchText"
          >
            <span
              class="buttonContent"
            >
              2020
              <span
                class="upDownIcon"
              />
            </span>
          </span>
        </button>
        <button
          aria-label="Следующий месяц"
          class="component ghost m iconOnly arrow"
        />
      </div>
    </div>
    <div
      class="container"
    >
      <table
        class="daysTable"
      >
        <thead>
          <tr>
            <th
              class="dayName"
            >
              Пн
            </th>
            <th
              class="dayName"
            >
              Вт
            </th>
            <th
              class="dayName"
            >
              Ср
            </th>
            <th
              class="dayName"
            >
              Чт
            </th>
            <th
              class="dayName"
            >
              Пт
            </th>
            <th
              class="dayName"
            >
              Сб
            </th>
            <th
              class="dayName"
            >
              Вс
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td />
            <td />
            <td />
            <td />
            <td />
            <td />
            <td>
              <button
                aria-selected="false"
                class="component ghost xs day firstDay"
                data-date="1604178000000"
                tabindex="-1"
                type="button"
              >
                <span
                  class="text stretchText"
                >
                  1
                </span>
              </button>
            </td>
          </tr>
          <tr>
            <td>
              <button
                aria-selected="false"
                class="component ghost xs day"
                data-date="1604264400000"
                tabindex="-1"
                type="button"
              >
                <span
                  class="text stretchText"
                >
                  2
                </span>
              </button>
            </td>
            <td>
              <button
                aria-selected="false"
                class="component ghost xs day"
                data-date="1604350800000"
                tabindex="-1"
                type="button"
              >
                <span
                  class="text stretchText"
                >
                  3
                </span>
              </button>
            </td>
            <td>
              <button
                aria-selected="false"
                class="component ghost xs day"
                data-date="1604437200000"
                tabindex="-1"
                type="button"
              >
                <span
                  class="text stretchText"
                >
                  4
                </span>
              </button>
            </td>
            <td>
              <button
                aria-selected="false"
                class="component ghost xs day"
                data-date="1604523600000"
                tabindex="-1"
                type="button"
              >
                <span
                  class="text stretchText"
                >
                  5
                </span>
              </button>
            </td>
            <td>
              <button
                aria-selected="false"
                class="component ghost xs day"
                data-date="1604610000000"
                tabindex="-1"
                type="button"
              >
                <span
                  class="text stretchText"
                >
                  6
                </span>
              </button>
            </td>
            <td>
              <button
                aria-selected="false"
                class="component ghost xs day"
                data-date="1604696400000"
                tabindex="-1"
                type="button"
              >
                <span
                  class="text stretchText"
                >
                  7
                </span>
              </button>
            </td>
            <td>
              <button
                aria-selected="false"
                class="component ghost xs day"
                data-date="1604782800000"
                tabindex="-1"
                type="button"
              >
                <span
                  class="text stretchText"
                >
                  8
                </span>
              </button>
            </td>
          </tr>
          <tr>
            <td>
              <button
                aria-selected="false"
                class="component ghost xs day"
                data-date="1604869200000"
                tabindex="-1"
                type="button"
              >
                <span
                  class="text stretchText"
                >
                  9
                </span>
              </button>
            </td>
            <td>
              <button
                aria-selected="false"
                class="component ghost xs day"
                data-date="1604955600000"
                tabindex="-1"
                type="button"
              >
                <span
                  class="text stretchText"
                >
                  10
                </span>
              </button>
            </td>
            <td>
              <button
                aria-selected="false"
                class="component ghost xs day"
                data-date="1605042000000"
                tabindex="-1"
                type="button"
              >
                <span
                  class="text stretchText"
                >
                  11
                </span>
              </button>
            </td>
            <td>
              <button
                aria-selected="false"
                class="component ghost xs day"
                data-date="1605128400000"
                tabindex="-1"
                type="button"
              >
                <span
                  class="text stretchText"
                >
                  12
                </span>
              </button>
            </td>
            <td>
              <button
                aria-selected="false"
                class="component ghost xs day"
                data-date="1605214800000"
                tabindex="-1"
                type="button"
              >
                <span
                  class="text stretchText"
                >
                  13
                </span>
              </button>
            </td>
            <td>
              <button
                aria-selected="false"
                class="component ghost xs day"
                data-date="1605301200000"
                tabindex="-1"
                type="button"
              >
                <span
                  class="text stretchText"
                >
                  14
                </span>
              </button>
            </td>
            <td>
              <button
                aria-selected="false"
                class="component ghost xs day"
                data-date="1605387600000"
                tabindex="-1"
                type="button"
              >
                <span
                  class="text stretchText"
                >
                  15
                </span>
              </button>
            </td>
          </tr>
          <tr>
            <td>
              <button
                aria-selected="false"
                class="component ghost xs day"
                data-date="1605474000000"
                tabindex="-1"
                type="button"
              >
                <span
                  class="text stretchText"
                >
                  16
                </span>
              </button>
            </td>
            <td>
              <button
                aria-selected="false"
                class="component ghost xs day"
                data-date="1605560400000"
                tabindex="-1"
                type="button"
              >
                <span
                  class="text stretchText"
                >
                  17
                </span>
              </button>
            </td>
            <td>
              <button
                aria-selected="false"
                class="component ghost xs day"
                data-date="1605646800000"
                tabindex="-1"
                type="button"
              >
                <span
                  class="text stretchText"
                >
                  18
                </span>
              </button>
            </td>
            <td>
              <button
                aria-selected="false"
                class="component ghost xs day"
                data-date="1605733200000"
                tabindex="-1"
                type="button"
              >
                <span
                  class="text stretchText"
                >
                  19
                </span>
              </button>
            </td>
            <td>
              <button
                aria-selected="false"
                class="component ghost xs day"
                data-date="1605819600000"
                tabindex="-1"
                type="button"
              >
                <span
                  class="text stretchText"
                >
                  20
                </span>
              </button>
            </td>
            <td>
              <button
                aria-selected="false"
                class="component ghost xs day"
                data-date="1605906000000"
                tabindex="-1"
                type="button"
              >
                <span
                  class="text stretchText"
                >
                  21
                </span>
              </button>
            </td>
            <td>
              <button
                aria-selected="false"
                class="component ghost xs day"
                data-date="1605992400000"
                tabindex="-1"
                type="button"
              >
                <span
                  class="text stretchText"
                >
                  22
                </span>
              </button>
            </td>
          </tr>
          <tr>
            <td>
              <button
                aria-selected="false"
                class="component ghost xs day"
                data-date="1606078800000"
                tabindex="-1"
                type="button"
              >
                <span
                  class="text stretchText"
                >
                  23
                </span>
              </button>
            </td>
            <td>
              <button
                aria-selected="false"
                class="component ghost xs day"
                data-date="1606165200000"
                tabindex="-1"
                type="button"
              >
                <span
                  class="text stretchText"
                >
                  24
                </span>
              </button>
            </td>
            <td>
              <button
                aria-selected="false"
                class="component ghost xs day"
                data-date="1606251600000"
                tabindex="-1"
                type="button"
              >
                <span
                  class="text stretchText"
                >
                  25
                </span>
              </button>
            </td>
            <td>
              <button
                aria-selected="false"
                class="component ghost xs day"
                data-date="1606338000000"
                tabindex="-1"
                type="button"
              >
                <span
                  class="text stretchText"
                >
                  26
                </span>
              </button>
            </td>
            <td>
              <button
                aria-selected="false"
                class="component ghost xs day"
                data-date="1606424400000"
                tabindex="-1"
                type="button"
              >
                <span
                  class="text stretchText"
                >
                  27
                </span>
              </button>
            </td>
            <td>
              <button
                aria-selected="false"
                class="component ghost xs day"
                data-date="1606510800000"
                tabindex="-1"
                type="button"
              >
                <span
                  class="text stretchText"
                >
                  28
                </span>
              </button>
            </td>
            <td>
              <button
                aria-selected="false"
                class="component ghost xs day"
                data-date="1606597200000"
                tabindex="-1"
                type="button"
              >
                <span
                  class="text stretchText"
                >
                  29
                </span>
              </button>
            </td>
          </tr>
          <tr>
            <td>
              <button
                aria-selected="true"
                class="component ghost xs day selected lastDay"
                data-date="1606683600000"
                tabindex="0"
                type="button"
              >
                <span
                  class="text stretchText"
                >
                  30
                </span>
              </button>
            </td>
            <td />
            <td />
            <td />
            <td />
            <td />
            <td />
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;
